--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 # Configuration files with sensitive data
 backend/config.py
 config.py
-
+.kiro/
 # ===========================
 # Python
 # ===========================
